--- a/thorntail/pom.xml
+++ b/thorntail/pom.xml
@@ -28,7 +28,7 @@
   <dependencies>
     <dependency>
       <groupId>org.kie</groupId>
-      <artifactId>openshift-kie-okeanos</artifactId>
+      <artifactId>openshift-kie-u212</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
