--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <version.com.fasterxml.jackson>2.9.8</version.com.fasterxml.jackson>
     <version.javax.cdi>2.0.SP1</version.javax.cdi>
     <version.javax.ws.rs>2.1.1</version.javax.ws.rs>
+    <version.drools>8.0.0-SNAPSHOT</version.drools>
   </properties>
 
   <modules>
@@ -47,30 +48,15 @@
       <!-- drools -->
       <dependency>
         <groupId>org.drools</groupId>
-        <artifactId>drools-canonical-model</artifactId>
-        <version>${version.org.kie}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jbpm</groupId>
-        <artifactId>jbpm-flow-builder</artifactId>
-        <version>${version.org.kie}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>org.drools</groupId>
-            <artifactId>drools-core-dynamic</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.drools</groupId>
-        <artifactId>drools-core-static</artifactId>
-        <version>${version.org.kie}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.drools</groupId>
         <artifactId>drools-model-compiler</artifactId>
-        <version>${version.org.kie}</version>
+        <version>${version.drools}</version>
       </dependency>
+      <dependency>
+        <groupId>org.kie</groupId>
+        <artifactId>kie-maven-plugin</artifactId>
+        <version>${version.drools}</version>
+      </dependency>
+
 
       <!-- kafka -->
       <dependency>
@@ -168,5 +154,29 @@
     <finalName>${project.artifactId}</finalName>
   </build>
 
+  <repositories>
+    <repository>
+      <id>central</id>
+      <name>Maven Central</name>
+      <url>http://repo.maven.apache.org/maven2</url>
+    </repository>
+    <repository>
+      <id>jboss</id>
+      <url>http://repository.jboss.org/nexus/content/groups/public/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>central</id>
+      <name>Maven Central</name>
+      <url>http://repo.maven.apache.org/maven2</url>
+    </pluginRepository>
+  </pluginRepositories>
 
 </project>
