--- a/u212/pom.xml
+++ b/u212/pom.xml
@@ -9,27 +9,14 @@
   </parent>
   <groupId>org.kie</groupId>
   <artifactId>openshift-kie-u212</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>${project.version}</version>
   <packaging>kjar</packaging>
 
   <dependencies>
     <dependency>
       <groupId>org.drools</groupId>
-      <artifactId>drools-core-static</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.drools</groupId>
       <artifactId>drools-model-compiler</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>org.drools</groupId>
-          <artifactId>drools-core-dynamic</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.thoughtworks.xstream</groupId>
-          <artifactId>xstream</artifactId>
-        </exclusion>
-      </exclusions>
+      <version>${version.drools}</version>
     </dependency>
 
     <dependency>
