--- a/u212/pom.xml
+++ b/u212/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>org.kie</groupId>
   <artifactId>openshift-kie-u212</artifactId>
-  <version>${project.version}</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>kjar</packaging>
 
   <dependencies>
