--- a/u212/pom.xml
+++ b/u212/pom.xml
@@ -25,8 +25,8 @@
     </dependency>
 
     <dependency>
-      <groupId>io.etcd</groupId>
-      <artifactId>jetcd-core</artifactId>
+      <groupId>com.ibm.etcd</groupId>
+      <artifactId>etcd-java</artifactId>
     </dependency>
 
     <dependency>
