--- a/thorntail/pom.xml
+++ b/thorntail/pom.xml
@@ -41,6 +41,10 @@
     </dependency>
     <dependency>
       <groupId>io.thorntail</groupId>
+      <artifactId>undertow</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.thorntail</groupId>
       <artifactId>logging</artifactId>
     </dependency>
   </dependencies>
