--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,7 @@
     <version.thorntail>2.3.0.Final</version.thorntail>
     <version.org.kie>8.0.0-SNAPSHOT</version.org.kie>
     <version.kafka.client>2.1.1</version.kafka.client>
-    <version.jetcd>0.3.0</version.jetcd>
-    <version.etcd-java>0.0.9</version.etcd-java>
-    <generateModel>YES</generateModel>
+    <!--<generateModel>YES</generateModel>-->
     <quarkus.version>0.11.0</quarkus.version>
     <rest.assured>3.3.0</rest.assured>
     <surefire.forkCount>1</surefire.forkCount>
@@ -28,7 +26,8 @@
     <version.javax.cdi>2.0.SP1</version.javax.cdi>
     <version.javax.ws.rs>2.1.1</version.javax.ws.rs>
     <version.drools>7.18.0.Final</version.drools>
-    <version.guava>27.0.1-jre</version.guava>
+    <version.servlet>4.0.1</version.servlet>
+    <version.k8s.client>4.1.3</version.k8s.client>
   </properties>
 
   <modules>
@@ -131,17 +130,13 @@
         <artifactId>undertow</artifactId>
         <version>${version.thorntail}</version>
       </dependency>
-      <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-        <version>${version.guava}</version>
-      </dependency>
 
-      <!-- etcd -->
+
+      <!-- fabric8 -->
       <dependency>
-        <groupId>com.ibm.etcd</groupId>
-        <artifactId>etcd-java</artifactId>
-        <version>${version.etcd-java}</version>
+        <groupId>io.fabric8</groupId>
+        <artifactId>kubernetes-client</artifactId>
+        <version>${version.k8s.client}</version>
       </dependency>
 
 
@@ -151,6 +146,13 @@
         <artifactId>cdi-api</artifactId>
         <version>${version.javax.cdi}</version>
         <scope>compile</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>${version.servlet}</version>
+        <scope>provided</scope>
       </dependency>
 
       <!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
