--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <version.thorntail>2.3.0.Final</version.thorntail>
-    <version.org.kie>8.0.0-SNAPSHOT</version.org.kie>
+    <version.org.kie>7.18.0.Final</version.org.kie>
     <version.kafka.client>2.1.1</version.kafka.client>
     <!--<generateModel>YES</generateModel>-->
     <quarkus.version>0.11.0</quarkus.version>
@@ -32,8 +32,8 @@
 
   <modules>
     <module>u212</module>
-    <module>quarkus</module>
     <module>thorntail</module>
+    <module>quarkus</module>
   </modules>
 
   <dependencyManagement>
