initial springboot deploy module

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <version.thorntail>2.3.0.Final</version.thorntail>
+    <version.springboot>2.2.0.M1</version.springboot>
     <version.org.kie>7.18.0.Final</version.org.kie>
     <version.kafka.client>2.1.1</version.kafka.client>
     <generateModel>YES</generateModel>
@@ -34,16 +35,27 @@
     <module>u212</module>
     <module>thorntail</module>
     <module>quarkus</module>
+    <module>springboot</module>
   </modules>
 
   <dependencyManagement>
     <dependencies>
+      <!-- Thorntail -->
       <dependency>
         <groupId>io.thorntail</groupId>
         <artifactId>bom-all</artifactId>
         <version>${version.thorntail}</version>
         <scope>import</scope>
         <type>pom</type>
+      </dependency>
+
+      <dependency>
+        <!-- Spring Boot -->
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${version.springboot}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
 
       <!-- drools -->
@@ -139,6 +151,18 @@
         <version>${version.k8s.client}</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+        <version>${version.springboot}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+        <version>${version.springboot}</version>
+        <scope>test</scope>
+      </dependency>
 
       <!-- -->
       <dependency>
@@ -165,6 +189,7 @@
 
     </dependencies>
   </dependencyManagement>
+
   <build>
     <finalName>${project.artifactId}</finalName>
   </build>
@@ -185,12 +210,38 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
+    <repository>
+      <id>spring-snapshots</id>
+      <name>Spring Snapshots</name>
+      <url>https://repo.spring.io/snapshot</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/milestone</url>
+    </repository>
   </repositories>
   <pluginRepositories>
     <pluginRepository>
       <id>central</id>
       <name>Maven Central</name>
       <url>http://repo.maven.apache.org/maven2</url>
+    </pluginRepository>
+    <pluginRepository>
+      <id>spring-snapshots</id>
+      <name>Spring Snapshots</name>
+      <url>https://repo.spring.io/snapshot</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/milestone</url>
     </pluginRepository>
   </pluginRepositories>
 
