--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,13 @@
 
       <dependency>
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-undertow</artifactId>
+        <artifactId>spring-boot-starter-jetty</artifactId>
+        <version>${version.springboot}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-jersey</artifactId>
         <version>${version.springboot}</version>
       </dependency>
 
