--- a/springboot/kubernetes/deployment.yaml
+++ b/springboot/kubernetes/deployment.yaml
@@ -26,7 +26,7 @@ spec:
             exec:
               command:
                 - curl
-                - localhost:8080/rest/health
+                - localhost:8080/health
             initialDelaySeconds: 20
             periodSeconds: 10
             timeoutSeconds: 1
@@ -38,7 +38,7 @@ spec:
             exec:
               command:
                 - curl
-                - localhost:8080/rest/health
+                - localhost:8080/health
             initialDelaySeconds: 10
             periodSeconds: 5
             timeoutSeconds: 1
