--- a/thorntail/pom.xml
+++ b/thorntail/pom.xml
@@ -11,7 +11,7 @@
   <groupId>org.kie</groupId>
   <artifactId>openshift-kie-thorntail</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <dependencyManagement>
     <dependencies>
@@ -46,11 +46,6 @@
     <dependency>
       <groupId>io.thorntail</groupId>
       <artifactId>logging</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.fabric8</groupId>
-      <artifactId>kubernetes-client</artifactId>
-      <version>${version.k8s.client}</version>
     </dependency>
   </dependencies>
 
