--- a/thorntail/src/main/resources/project-defaults.yaml
+++ b/thorntail/src/main/resources/project-defaults.yaml
@@ -1,6 +1,6 @@
 thorntail:
   logging:
-    level: DEBUG
+    level: INFO
     pattern-formatters:
       LOG_FORMATTER:
         pattern: "CUSTOM LOG FORMAT %p [%c] %s%e%n"
