--- a/u212/src/main/resources/configuration.properties
+++ b/u212/src/main/resources/configuration.properties
@@ -5,6 +5,7 @@ key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 value.deserializer=org.kie.u212.producer.EventJsonDeserializer
 max.poll.interval.ms=10000
 metadata.max.age.ms=10000
+iteration.between.snapshot=10
 acks=all
 retries=0
 batch.size=16384
