fix snapshooter producer config serialization

--- a/u212/src/main/resources/consumer.properties
+++ b/u212/src/main/resources/consumer.properties
@@ -1,5 +1,5 @@
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-value.deserializer=org.kie.u212.producer.EventJsonDeserializer
+value.deserializer=org.kie.u212.deserializer.EventDeserializer
 
 max.poll.interval.ms=10000
 
