--- a/u212/src/main/resources/producer.properties
+++ b/u212/src/main/resources/producer.properties
@@ -1,5 +1,5 @@
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=org.kie.u212.consumer.EventJsonSerializer
+value.serializer=org.kie.u212.serializer.EventJsonSerializer
 
 batch.size=16384
 
