enabled snapshooter and fix kafka props conf

--- a/u212/src/main/resources/snapshot_consumer.properties
+++ b/u212/src/main/resources/snapshot_consumer.properties
@@ -1,4 +1,4 @@
-key.deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
+key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 #value.deserializer=org.kie.u212.deserializer.ObjectDeserializer
 value.deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
 
