--- a/u212/src/main/resources/snapshot_producer.properties
+++ b/u212/src/main/resources/snapshot_producer.properties
@@ -1,6 +1,4 @@
-#key.serializer=org.apache.kafka.common.serialization.ByteArraySerializer
-#value.serializer=org.kie.u212.serializer.ObjectSerializer
-key.serializer=org.apache.kafka.common.serialization.ByteArraySerializer
+key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=org.apache.kafka.common.serialization.ByteArraySerializer
 
 batch.size=16384
