--- a/client-producer/src/main/resources/configuration.properties
+++ b/client-producer/src/main/resources/configuration.properties
@@ -1,8 +1,8 @@
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=org.kie.u212.consumer.EventJsonSerializer
-bootstrap.servers=my-cluster-kafka-bootstrap-my-kafka-project.192.168.99.100.nip.io:443
+value.serializer=org.kie.u212.serializer.EventJsonSerializer
+bootstrap.servers=<bootstrap_servers>:443
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-value.deserializer=org.kie.u212.producer.EventJsonDeserializer
+value.deserializer=org.kie.u212.serializer.EventJsonDeserializer
 max.poll.interval.ms=10000
 metadata.max.age.ms=10000
 acks=all
@@ -11,8 +11,8 @@ batch.size=16384
 enable.auto.commit=false
 linger.ms=1
 security.protocol=SSL
-ssl.keystore.location=/data/drools_w/openshift-hacep/client-producer/src/main/resources//keystore.jks
+ssl.keystore.location=/<path>/openshift-hacep/client-producer/src/main/resources//keystore.jks
 ssl.keystore.password=password
-ssl.truststore.location=/data/drools_w/openshift-hacep/client-producer/src/main/resources//keystore.jks
+ssl.truststore.location=/<path>/openshift-hacep/client-producer/src/main/resources//keystore.jks
 ssl.truststore.password=password
 auto.offset.reset=earliest
