--- a/client-producer/src/main/resources/consumer.properties
+++ b/client-producer/src/main/resources/consumer.properties
@@ -1,12 +1,12 @@
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-value.deserializer=org.kie.u212.producer.EventJsonDeserializer
+value.deserializer=org.kie.u212.serializer.EventJsonDeserializer
 max.poll.interval.ms=10000
 enable.auto.commit=false
 metadata.max.age.ms=10000
 auto.offset.reset=earliest
-bootstrap.servers=my-cluster-kafka-bootstrap-my-kafka-project.192.168.99.100.nip.io:443
+bootstrap.servers=<bootrap_server>:443
 security.protocol=SSL
-ssl.keystore.location=/data/drools_w/openshift-hacep/client-producer/src/main/resources//keystore.jks
+ssl.keystore.location=/<path>/openshift-hacep/client-producer/src/main/resources//keystore.jks
 ssl.keystore.password=password
-ssl.truststore.location=/data/drools_w/openshift-hacep/client-producer/src/main/resources//keystore.jks
+ssl.truststore.location=/<path>/openshift-hacep/client-producer/src/main/resources//keystore.jks
 ssl.truststore.password=password
