--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.version>1.0-SNAPSHOT</project.version>
-    <quarkus.version>0.13.2</quarkus.version>
+    <quarkus.version>0.14.0</quarkus.version>
     <rest.assured>3.3.0</rest.assured>
     <surefire.forkCount>1</surefire.forkCount>
     <surefire.version>2.22.0</surefire.version>
@@ -26,7 +26,7 @@
     <version.javax.ws.rs>2.1.1</version.javax.ws.rs>
     <version.kafka.client>2.1.1</version.kafka.client>
     <version.k8s.client>4.2.1</version.k8s.client>
-    <version.org.kie>7.18.0.Final</version.org.kie>
+    <version.org.kie>7.20.0.Final</version.org.kie>
     <version.servlet>4.0.1</version.servlet>
     <version.springboot>2.2.0.M2</version.springboot>
   </properties>
@@ -36,6 +36,7 @@
     <module>client-producer</module>
     <module>springboot</module>
     <module>quarkus</module>
+    <module>jdkhttp</module>
   </modules>
 
   <dependencyManagement>
