--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -45,6 +45,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${version.springboot}</version>
         <configuration>
           <executable>true</executable>
         </configuration>
