updated docker image and fix fat jar creation

--- a/jdkhttp/pom.xml
+++ b/jdkhttp/pom.xml
@@ -69,10 +69,13 @@
             </goals>
             <configuration>
               <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>org.kie.u212.endpoint.bootstrap.JdkHttpServer</mainClass>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                  <resource>META-INF/kie.conf</resource>
                 </transformer>
               </transformers>
+              <artifactSet>
+              </artifactSet>
+              <outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>
             </configuration>
           </execution>
         </executions>
