--- a/client/src/main/resources/configuration.properties
+++ b/client/src/main/resources/configuration.properties
@@ -1,6 +1,6 @@
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=org.kie.u212.serializer.EventJsonSerializer
-bootstrap.servers=my-cluster-kafka-bootstrap-my-kafka-project.192.168.99.100.nip.io:443
+bootstrap.servers=my-cluster-kafka-bootstrap-my-kafka-project.<ip>.nip.io:443
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 value.deserializer=org.kie.u212.serializer.EventJsonDeserializer
 max.poll.interval.ms=10000
@@ -11,8 +11,8 @@ batch.size=16384
 enable.auto.commit=false
 linger.ms=1
 security.protocol=SSL
-ssl.keystore.location=/data/drools_w/openshift-hacep/client-producer/src/main/resources//keystore.jks
+ssl.keystore.location=/<path>/openshift-hacep/client/src/main/resources/keystore.jks
 ssl.keystore.password=password
-ssl.truststore.location=/data/drools_w/openshift-hacep/client-producer/src/main/resources//keystore.jks
+ssl.truststore.location=/<path>/openshift-hacep/client/src/main/resources/keystore.jks
 ssl.truststore.password=password
 auto.offset.reset=earliest
