--- a/client/src/main/resources/consumer.properties
+++ b/client/src/main/resources/consumer.properties
@@ -4,9 +4,9 @@ max.poll.interval.ms=10000
 enable.auto.commit=false
 metadata.max.age.ms=10000
 auto.offset.reset=earliest
-bootstrap.servers=my-cluster-kafka-bootstrap-my-kafka-project.192.168.99.100.nip.io:443
+bootstrap.servers=my-cluster-kafka-bootstrap-my-kafka-project.<ip>.nip.io:443
 security.protocol=SSL
-ssl.keystore.location=/data/drools_w/openshift-hacep/client-producer/src/main/resources//keystore.jks
+ssl.keystore.location=/<path>/openshift-hacep/client/src/main/resources//keystore.jks
 ssl.keystore.password=password
-ssl.truststore.location=/data/drools_w/openshift-hacep/client-producer/src/main/resources//keystore.jks
+ssl.truststore.location=/<path>/openshift-hacep/client/src/main/resources//keystore.jks
 ssl.truststore.password=password
