split client and demo module

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
   <modules>
     <module>u212</module>
     <module>client</module>
+    <module>demo</module>
     <module>springboot</module>
     <module>quarkus</module>
     <module>jdkhttp</module>
