KafkaServer for integration tests

--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,13 @@
     <version.javax.cdi>2.0.SP1</version.javax.cdi>
     <version.javax.el>3.0.1-b08</version.javax.el>
     <version.javax.ws.rs>2.1.1</version.javax.ws.rs>
+    <version.junit>4.12</version.junit>
     <version.kafka.client>2.1.1</version.kafka.client>
     <version.k8s.client>4.2.1</version.k8s.client>
     <version.logback.core>1.2.3</version.logback.core>
     <version.org.kie>7.21.0.Final</version.org.kie>
     <version.servlet>4.0.1</version.servlet>
+    <version.slf4j>1.7.26</version.slf4j>
     <version.springboot>2.2.0.M3</version.springboot>
   </properties>
 
@@ -39,6 +41,7 @@
     <module>springboot</module>
     <module>quarkus</module>
     <module>jdkhttp</module>
+    <module>test</module>
   </modules>
 
   <dependencyManagement>
