--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -20,17 +20,6 @@
       <version>${version.slf4j}</version>
     </dependency>
 
-    <!--
-        <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-          <version>${version.slf4j}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-log4j12</artifactId>
-          <version>${version.slf4j}</version>
-        </dependency>-->
     <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka-log4j-appender</artifactId>
@@ -64,6 +53,12 @@
       <artifactId>kafka-clients</artifactId>
       <version>${version.kafka.client}</version>
       <classifier>test</classifier>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>${version.commons.codec}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
