processing msg as a Leader

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -19,6 +19,12 @@
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.kie</groupId>
+      <artifactId>openshift-kie-client</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
     <!-- log -->
     <dependency>
       <groupId>org.slf4j</groupId>
