--- a/u212/pom.xml
+++ b/u212/pom.xml
@@ -14,6 +14,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.kie</groupId>
+      <artifactId>kie-remote</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.drools</groupId>
       <artifactId>drools-model-compiler</artifactId>
       <version>${version.drools}</version>
@@ -55,6 +61,12 @@
       <version>${version.kafka.client}</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.kie</groupId>
+          <artifactId>kie-remote</artifactId>
+          <version>1.0-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
