fixed code with KieRemote API

--- a/integration/src/test/resources/producer.properties
+++ b/integration/src/test/resources/producer.properties
@@ -1,5 +1,5 @@
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=org.kie.u212.serializer.EventJsonSerializer
+value.serializer=org.apache.kafka.common.serialization.ByteArraySerializer
 batch.size=16384
 metadata.max.age.ms=10000
 acks=all
