--- a/integration/src/test/resources/consumer.properties
+++ b/integration/src/test/resources/consumer.properties
@@ -1,5 +1,5 @@
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-value.deserializer=org.kie.u212.deserializer.EventDeserializer
+value.deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
 max.poll.interval.ms=10000
 enable.auto.commit=false
 metadata.max.age.ms=10000
