--- a/quarkus/pom.xml
+++ b/quarkus/pom.xml
@@ -70,7 +70,7 @@
       <plugin>
         <groupId>io.quarkus</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
-        <version>${quarkus.version}</version>
+        <version>${version.quarkus}</version>
         <executions>
           <execution>
             <goals>
@@ -90,7 +90,7 @@
           <plugin>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-maven-plugin</artifactId>
-            <version>${quarkus.version}</version>
+            <version>${version.quarkus}</version>
             <executions>
               <execution>
                 <goals>
