--- a/u212/src/main/resources/producer.properties
+++ b/u212/src/main/resources/producer.properties
@@ -1,5 +1,5 @@
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
+value.serializer=org.apache.kafka.common.serialization.ByteArraySerializer
 
 batch.size=16384
 
