--- a/demo/src/main/resources/configuration.properties
+++ b/demo/src/main/resources/configuration.properties
@@ -1,8 +1,8 @@
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=org.kie.u212.serializer.EventJsonSerializer
+value.serializer=org.apache.kafka.common.serialization.ByteArraySerializer
 bootstrap.servers=my-cluster-kafka-bootstrap-my-kafka-project.<ip>.nip.io:443
-key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-value.deserializer=org.kie.u212.serializer.EventJsonDeserializer
+value.deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
+
 max.poll.interval.ms=10000
 metadata.max.age.ms=10000
 acks=all
@@ -11,8 +11,8 @@ batch.size=16384
 enable.auto.commit=false
 linger.ms=1
 security.protocol=SSL
-ssl.keystore.location=/<path>/openshift-drools-hacep/client/src/main/resources/keystore.jks
+ssl.keystore.location=/data/drools_w/openshift-drools-hacep/client/src/main/resources/keystore.jks
 ssl.keystore.password=password
-ssl.truststore.location=/<path>/openshift-drools-hacep/client/src/main/resources/keystore.jks
+ssl.truststore.location=/data/drools_w/openshift-drools-hacep/client/src/main/resources/keystore.jks
 ssl.truststore.password=password
 auto.offset.reset=earliest
