--- a/demo/src/main/resources/producer.properties
+++ b/demo/src/main/resources/producer.properties
@@ -1,13 +1,13 @@
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=org.kie.u212.serializer.EventJsonSerializer
+value.serializer=org.apache.kafka.common.serialization.ByteArraySerializer
 batch.size=16384
 metadata.max.age.ms=10000
 acks=all
 retries=0
 linger.ms=1
-bootstrap.servers=my-cluster-kafka-bootstrap-my-kafka-project.<ip>.nip.io:443
+bootstrap.servers=my-cluster-kafka-bootstrap-my-kafka-project.192.168.99.100.nip.io:443
 security.protocol=SSL
-ssl.keystore.location=/<path>/openshift-drools-hacep/client/src/main/resources/keystore.jks
+ssl.keystore.location=/data/drools_w/openshift-drools-hacep/client/src/main/resources/keystore.jks
 ssl.keystore.password=password
-ssl.truststore.location=/<path>/openshift-drools-hacep/client/src/main/resources/keystore.jks
+ssl.truststore.location=/data/drools_w/openshift-drools-hacep/client/src/main/resources/keystore.jks
 ssl.truststore.password=password
