--- a/u212/pom.xml
+++ b/u212/pom.xml
@@ -67,6 +67,11 @@
           <version>1.0-SNAPSHOT</version>
           <scope>compile</scope>
       </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
