--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <surefire.version>2.22.0</surefire.version>
     <version.com.fasterxml.jackson>2.9.9</version.com.fasterxml.jackson>
     <version.commons.codec>1.12</version.commons.codec>
-    <version.drools>7.24.0-SNAPSHOT</version.drools>
+    <version.drools>7.23.0.Final</version.drools>
     <version.javax.cdi>2.0.SP1</version.javax.cdi>
     <version.javax.el>3.0.1-b08</version.javax.el>
     <version.javax.ws.rs>2.1.1</version.javax.ws.rs>
@@ -28,7 +28,7 @@
     <version.k8s.client>4.2.1</version.k8s.client>
     <version.logback.core>1.2.3</version.logback.core>
     <version.org.kie>7.23.0.Final</version.org.kie>
-    <version.quarkus>0.16.1</version.quarkus>
+    <version.quarkus>0.18.0</version.quarkus>
     <version.servlet>4.0.1</version.servlet>
     <version.slf4j>1.7.26</version.slf4j>
     <version.logback.kafka.appender>0.2.0-RC2</version.logback.kafka.appender>
