--- a/jdkhttp/kubernetes/debug_pod.yaml
+++ b/jdkhttp/kubernetes/debug_pod.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
     - name: main
-      image: "desmax74/openshift-kie-jdkhttp:0.3"
+      image: "desmax74/openshift-kie-jdkhttp:m.4.03"
       env:
         - name: JAVA_TOOL_OPTIONS
           value: -agentlib:jdwp=transport=dt_socket,server=y,address=8000,suspend=n
@@ -28,3 +28,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
+        - resources:
+            requests:
+              memory: "256Mi"
+              cpu:  "100m"
+            limits:
+              memory: "256mi"
+              cpu: "250m"
