restored thorntail module, added jvm param into Docker files

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <version.slf4j>1.7.26</version.slf4j>
     <version.logback.kafka.appender>0.2.0-RC2</version.logback.kafka.appender>
     <version.springboot>2.2.0.M4</version.springboot>
+    <version.thorntail>2.4.0.Final</version.thorntail>
   </properties>
 
   <modules>
@@ -40,12 +41,19 @@
     <module>client</module>
     <module>springboot</module>
     <module>jdkhttp</module>
+    <module>thorntail</module>
     <module>integration</module>
   </modules>
 
   <dependencyManagement>
     <dependencies>
-      
+      <dependency>
+        <groupId>io.thorntail</groupId>
+        <artifactId>bom-all</artifactId>
+        <version>${version.thorntail}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
       <!-- drools -->
       <dependency>
         <groupId>org.drools</groupId>
