--- a/kie-remote/pom.xml
+++ b/kie-remote/pom.xml
@@ -10,13 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>kie-remote</artifactId>
+
   <dependencies>
-    <dependency>
-      <groupId>org.drools</groupId>
-      <artifactId>drools-core</artifactId>
-      <version>${version.drools}</version>
-      <scope>compile</scope>
-    </dependency>
+      <dependency>
+          <groupId>org.apache.kafka</groupId>
+          <artifactId>kafka-clients</artifactId>
+      </dependency>
   </dependencies>
 
 </project>
