--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -15,13 +15,13 @@
   <dependencies>
     <dependency>
       <groupId>org.kie</groupId>
-      <artifactId>openshift-kie-hacep</artifactId>
+      <artifactId>sample-hacep-project-kjar</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
-   <dependency>
+    <dependency>
       <groupId>org.kie</groupId>
-      <artifactId>openshift-kie-client</artifactId>
+      <artifactId>openshift-kie-hacep</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
