--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,11 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.version>1.0-SNAPSHOT</project.version>
     <surefire.forkCount>1</surefire.forkCount>
     <surefire.version>2.22.0</surefire.version>
     <version.com.fasterxml.jackson>2.9.9</version.com.fasterxml.jackson>
     <version.commons.codec>1.12</version.commons.codec>
-    <version.drools>7.23.0.Final</version.drools>
+    <version.org.kie>7.23.0.Final</version.org.kie>
     <version.javax.cdi>2.0.SP1</version.javax.cdi>
     <version.javax.el>3.0.1-b08</version.javax.el>
     <version.javax.ws.rs>2.1.1</version.javax.ws.rs>
@@ -27,7 +26,6 @@
     <version.kafka.client>2.1.1</version.kafka.client>
     <version.k8s.client>4.2.1</version.k8s.client>
     <version.logback.core>1.2.3</version.logback.core>
-    <version.org.kie>7.23.0.Final</version.org.kie>
     <version.servlet>4.0.1</version.servlet>
     <version.slf4j>1.7.26</version.slf4j>
     <version.logback.kafka.appender>0.2.0-RC2</version.logback.kafka.appender>
@@ -38,10 +36,10 @@
   <modules>
     <module>kie-remote</module>
     <module>hacep</module>
-    <module>client</module>
     <module>springboot</module>
     <module>jdkhttp</module>
     <module>thorntail</module>
+    <module>sample-hacep-project</module>
     <module>integration</module>
   </modules>
 
@@ -58,12 +56,12 @@
       <dependency>
         <groupId>org.drools</groupId>
         <artifactId>drools-model-compiler</artifactId>
-        <version>${version.drools}</version>
+        <version>${version.org.kie}</version>
       </dependency>
       <dependency>
         <groupId>org.kie</groupId>
         <artifactId>kie-maven-plugin</artifactId>
-        <version>${version.drools}</version>
+        <version>${version.org.kie}</version>
       </dependency>
 
 
