--- a/jdkhttp/pom.xml
+++ b/jdkhttp/pom.xml
@@ -18,6 +18,11 @@
       <artifactId>openshift-kie-hacep</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.kie</groupId>
+      <artifactId>sample-hacep-project-kjar</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
